# SpaceInvaderCLI

./: CMakeLists.txt  README.md  TODO
engine/include/: cliinputmanager.h  clirenderer.h  collidermanager.h  game.h  gameobject.h  inputmanager.h  point.h  renderer.h  renderingprimitives.h
engine/src/: cliinputmanager.cpp  clirenderer.cpp  collidermanager.cpp  game.cpp  gameobject.cpp  inputmanager.cpp  renderingprimitives.cpp
engine/src/template/: game.tpp
include/: bullet.h  colliderid.h  enemy.h  enemymanager.h  entity.h  player.h  shooter.h  spaceinvader.h  spritemanager.h
src/: enemy.cpp  enemymanager.cpp  main.cpp  player.cpp  spaceinvader.cpp
